# nervous-bus

./: .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CLAUDE.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-plugin-tests.yml  gitleaks.yml  (+5 more)
adapters/dashboard/autobench-pulse/: README.md  pulse.py  pulse.tcss  pyproject.toml  requirements.txt
adapters/dashboard/autobench-pulse/pulse_app/: __init__.py  __main__.py  app.py  cli.py  palette.py  source.py  state.py  widgets.py
adapters/dashboard/autobench-pulse/pulse_app/tests/: conftest.py  test_ahe_prediction_panel.py  test_ahe_tracker.py  test_iter_header_live_tally.py  test_iteration_lineage_strip.py  test_kernel_arena.py  test_multi_advocate_panel.py  test_palette.py  test_queue_pressure_bar.py  test_worker_latency_histogram.py
adapters/dashboard/autobench-pulse/tests/: conftest.py  test_app_pilot.py  test_ce_pattern_panel.py  test_cost_rate_panel.py  test_divergence_highlights.py  test_failure_code_sidebar.py  test_improver_parse_status.py  test_iteration_progress.py  test_refutation_flash.py  test_source.py  test_state.py  test_stderr_panel.py  test_watermark_thermometer.py  test_widgets_pilot.py
adapters/exporter/: README.md  __init__.py  prometheus_exporter.py  pyproject.toml  test_prometheus_exporter.py
adapters/exporter/dashboards/: nervous-bus-overview.json
docs/: TRACE-CONTEXT.md  channel-retirement-runbook.md
plugin/: Cargo.toml
plugin/.cargo/: config.toml
plugin/src/: lib.rs
plugin/tests/: integration_pipe_roundtrip.rs  route_smoke.rs
schemas/: CHANNELS.md  README.md  _README.md  _deprecated_schemas.md  _per-project-channels.README.md  _per-project.capabilities.advertised.v1.json  _per-project.pattern.discovered.v1.json  _per-project.research.finding.v1.json  _per-project.rule.push.v1.json  _per-project.skill.push.v1.json  agent.message.v1.json  agent.session.heartbeat.v1.json  agent.session.linked.v1.json  agent.session.snapshot.v1.json  agent.session.v1.json  autobench.adversarial.curveball_generated.v1.json  autobench.adversarial.round_complete.v1.json  autobench.budget.gauge.v1.json  autobench.budget.rate.v1.json  autobench.budget.warning.v1.json  autobench.case.result.v1.json  autobench.command.acknowledged.v1.json  autobench.command.v1.json  autobench.continuous.digest.v1.json  autobench.continuous.promotion_decision.v1.json  autobench.continuous.session_complete.v1.json  autobench.cross_domain.evaluation.v1.json  autobench.curriculum.cycle.v1.json  autobench.curriculum.problem.rejected.v1.json  autobench.curriculum.problem.v1.json  autobench.cycle.report.v1.json  autobench.cycle.requested.v1.json  autobench.diversity.v1.json  autobench.failure.category.v1.json  autobench.failure_pattern.v1.json  autobench.gpu_job.v1.json  autobench.gpu_result.v1.json  autobench.guidance.lifecycle_transition.v1.json  autobench.heartbeat.timeout.v1.json  autobench.improver.convergence.threshold_adapted.v1.json  (+386 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/.cargo/: config.toml
sdk/rust/src/: lib.rs  streams.rs
tests/: test_channel_taxonomy.py  test_session_schemas.py  test_shell_publish_json.py  test_shell_validation_degradation.py
tools/: NeuralReaction.slang  ab_minimax_endpoints.py  ab_minimax_hard_case.py  ab_minimax_hard_endpoints.py  ab_minimax_thinking.py  bake_kernel_lut.py  check_minimax_routing.py  check_minimax_thinking.py  check_private_schema_leak.py  check_schema_coverage.py  check_subscription_coverage.py  claims_audit.py  curriculum_diversity_drift.py  curriculum_overnight_burn.sh  cycle_monitor.py  distill_reaction.py  gen_channels_md.py  invalidation_scanner.py  private_schema_prefixes.txt  pulse_snapshot.py  render_composition.py  render_evolved_kernels.py  render_matter_state.py  render_vault_shaders.py  scan_emitted_channels.py  scan_subscribed_channels.py  schema_coverage_allowlist.txt  schema_coverage_deprecated.txt  schema_dead_letter_triage.md  schema_hygiene.py  subscription_coverage_allowlist.txt  subscription_drift_baseline.txt  telemetry_collect.py  tengine_bench_capture.py  test_check_schema_coverage.py  test_check_subscription_coverage.py  test_scan_emitted_channels.py  test_scan_subscribed_channels.py  tsp_analyze.py  tsp_watch.py  (+1 more)
(+150 files in other folders)
