[package]
name = "nbus"
version = "0.1.0-dev"
edition = "2021"
description = "Typed Rust SDK for nervous-bus — publish + listen via shell wrapper for now, native plugin pipe later."
license = "MIT OR Apache-2.0"
repository = "https://github.com/warxhead1/nervous-bus"

[lib]
path = "src/lib.rs"

[features]
default = ["subprocess"]
subprocess = []
native = []
listener = ["notify"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = { version = "7", optional = true }
getrandom = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"