[package]
name = "nbus"
version = "0.1.0-dev"
edition = "2021"
description = "Typed Rust SDK for nervous-bus — publish + listen via shell wrapper for now, native plugin pipe later."
license = "MIT OR Apache-2.0"
repository = "https://github.com/warxhead1/nervous-bus"

[lib]
path = "src/lib.rs"

[features]
default = ["subprocess"]
subprocess = []
native = []
listener = ["notify"]
# Real Redis Streams consumer-group transport (XREADGROUP/XACK/XAUTOCLAIM).
# Opt-in: pulls in redis + tokio, kept out of the default feature set so
# callers that only need `publish()` stay dependency-light.
streams = ["dep:redis", "dep:tokio"]
# Live-Redis integration tests for the `streams` module (see
# sdk/rust/src/streams.rs `live_tests`). Requires a reachable Redis/Valkey
# instance (NERVOUS_REDIS_TEST_URL, default redis://127.0.0.1:6379/15).
# Separate from `streams` so `cargo test --features streams` alone stays
# infra-free; enable both to run the live suite.
streams-live-tests = ["streams"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = { version = "7", optional = true }
getrandom = "0.2"
chrono = "0.4"
redis = { version = "0.27", optional = true, features = ["tokio-comp", "connection-manager", "streams"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }