[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobench-pulse"
version = "0.2.0"
description = "Live Textual dashboard for autobench observability events."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nervous-bus" }]
dependencies = [
    "textual>=1.0",
    "textual-plotext>=1.0",
]

[project.optional-dependencies]
# Inline raster scatter (TGP/Sixel) — opt-in. Stretch goal 7.11.
graphics = ["textual-image>=0.6"]
# Pilot snapshot tests
test = ["pytest>=7"]

[project.scripts]
pulse-app = "pulse_app.cli:main"

[tool.setuptools]
packages = ["pulse_app"]
py-modules = ["pulse"]
